kubectl/2-ingress/codelab-2-ingress.yaml
# NOTE: https://github.com/devJRL/CodeLab-Docker-Kubernetes/tree/master/kubectl/2-ingress#ingress
apiVersion: v1
kind: Service
metadata:
  name: codelab-simple-loadbalance
spec:
  selector: # Select Label of Resource
    app: codelab # https://github.com/devJRL/CodeLab-Docker-Kubernetes/blob/master/kubectl/1-pod/codelab-1-pod.yaml#L7
  ports:
    - name: codelab-simple-pod
      port: 80
      targetPort: 80 # https://github.com/devJRL/CodeLab-Docker-Kubernetes/blob/master/kubectl/1-pod/codelab-1-pod.yaml#L15

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: codelab-simple-ingress
spec:
  rules:
    - host: codelab.simple # Routing Host
      http:
        paths:
          - path: /
            backend:
              serviceName: codelab-simple-loadbalance
              servicePort: 80
